# ModelEvaluation

./: CMakeLists.txt  Main.qml  README.md  main.cpp
Backend/: Csvreader.cpp  Csvreader.h  modelanalysis.cpp  modelanalysis.h  modelanalysisv2.cpp  modelanalysisv2.h
UI/LeftScreen/: ConfusionMatrix_L.qml  LeftScreen.qml  MetricsRegresion_L.qml  Metrics_L.qml  ROCGraph_L.qml
UI/RightScreen/: ConfusionMatrix_R.qml  MetricsRegresion_R.qml  Metrics_R.qml  ROCGraph_R.qml  RightScreen.qml
UI/Separator/: Separator.qml
UI/TopBar/: TopBar.qml
